--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -284,7 +284,7 @@ indices.recovery.concurrent_streams: 5
 # operational within the cluster. This should be set to a quorum/majority of
 # the master-eligible nodes in the cluster.
 #
-discovery.zen.minimum_master_nodes: 1
+#discovery.zen.minimum_master_nodes: 1
 
 # Set the time to wait for ping responses from other nodes when discovering.
 # Set this option to a higher value on a slow or congested network
@@ -364,7 +364,7 @@ discovery.zen.ping.unicast.hosts: [{{elk_elasticsearch.hostname}}]
 
 ############################## Scripting ######################################
 
-script.groovy.sandbox.enabled: true
+#script.groovy.sandbox.enabled: true
 
 ############################## Network And HTTP ###############################
 
